--- a/index.html
+++ b/index.html
@@ -1,21 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TCA #3</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="row navigation">
             <h4 class="col">TCA #3</h4>
-            <a class="col" herf="#">Home</a>
-            <a class="col" herf="#">Services</a> 
-            <a class="col" herf="#">Features</a> 
-            <a class="col" herf="#">Studio</a>
+            <a class="col-1" herf="#">Home</a>
+            <a class="col-1" herf="#">Services</a>
+            <a class="col-1" herf="#">Features</a>
+            <a class="col-1" herf="#">Studio</a>
+            <div class="col-2">
+                <button type="button" class="btn btn-warning">Hire Us!</button>
+            </div>
         </div>
-    </div>
+        <div class="row splashscreen align-items-center">
+            <div class="col-3 splashText">
+                <h1>We're a Digital Agency</h1>
+                <p>We help businesses establish a strong online presence and reach their target audience.</p>
+                <a href="#">Learn More &rightarrow;</a>
+            </div>
+            <div class="col-3 splashImage">
+                <img src="img/splash.png" alt="Splash Image" class="img-fluid">
+            </div>
+        </div>
+        <div class="container">
+            <div class="row services text-center my-4">
+                <div class="col">
+                    <button type="button" class="btn btn-info ">Creative</button>
+                </div>
+                <div class="col">
+
+                    <button type="button" class="btn btn-warning ">Development</but◘ton>
+                </div>
+                <div class="col">
+
+                    <button type="button" class="btn btn-primary ">Design</button>
+                </div>
+            </div>
+            <div class="row features text-center my-4">
+                <div class="col-4">
+                    <h3>Modernism</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi mollitia dolorum
+                        doloremque explicabo tempora maxime nihil aspernatur, nostrum expedita cupiditate est beatae
+                        autem rem, id fugit, non laboriosam! Magnam.</p>
+                    <a href="#">Get Service &rightarrow;</a>
+                </div>
+                <div class="col-4">
+                    <h3>Branding</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi mollitia dolorum
+                        doloremque explicabo tempora maxime nihil aspernatur, nostrum expedita cupiditate est beatae
+                        autem rem, id fugit, non laboriosam! Magnam.</p>
+                    <a href="#">Get Service &rightarrow;</a>
+                </div>
+                <div class="col-4">
+                    <h3>Animation</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi mollitia dolorum
+                        doloremque explicabo tempora maxime nihil aspernatur, nostrum expedita cupiditate est beatae
+                        autem rem, id fugit, non laboriosam! Magnam.</p>
+                    <a href="#">Get Service &rightarrow;</a>
+                </div>
+                <hr>
+                <div class="col-4">
+                    <h3>Strategy</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi mollitia dolorum
+                        doloremque explicabo tempora maxime nihil aspernatur, nostrum expedita cupiditate est beatae
+                        autem rem, id fugit, non laboriosam! Magnam.</p>
+                    <a href="#">Get Service &rightarrow;</a>
+                </div>
+                <div class="col-4">
+                    <h3>Innovation</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi mollitia dolorum
+                        doloremque explicabo tempora maxime nihil aspernatur, nostrum expedita cupiditate est beatae
+                        autem rem, id fugit, non laboriosam! Magnam.</p>
+                    <a href="#">Get Service &rightarrow;</a>
+                </div>
+                <div class="col-4">
+                    <h3>Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi mollitia dolorum
+                        doloremque explicabo tempora maxime nihil aspernatur, nostrum expedita cupiditate est beatae
+                        autem rem, id fugit, non laboriosam! Magnam.</p>
+                    <a href="#">Get Service &rightarrow;</a>
+                </div>
+                <div class="row attribution">
+                    <p>Subash Chandra for seative Digital-<a
+                            href="https://dribbble.com/shots/21462602-Agency-Zodix-Landing-Page-v2">Link to Design</a>
+                    </p>
+                </div>
+            </div>
+
+        </div>
 </body>
+
 </html>
